--- a/Belajar/nl.lproj/Main.strings
+++ b/Belajar/nl.lproj/Main.strings
@@ -1,24 +1,84 @@
+/* Class = "UINavigationItem"; title = "Table of Contents"; ObjectID = "3q9-og-cux"; */
+"3q9-og-cux.title" = "Inhoudsopgave";
+
 /* Class = "UINavigationItem"; title = "Article"; ObjectID = "5Dp-ay-gab"; */
 "5Dp-ay-gab.title" = "Artikel";
 
-/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "8cr-W2-dmV"; */
-"8cr-W2-dmV.normalTitle" = "Annuleer";
+/* (No Commment) */
+"6hv-iQ-aNW.text" = "Spraakmodus";
 
-/* Class = "UINavigationItem"; title = "Library"; ObjectID = "LTM-N8-0eI"; */
-"LTM-N8-0eI.title" = "Bibliotheek";
+/* (No Commment) */
+"7DW-JU-1VL.text" = "Spreeksnelheid";
+
+/* Class = "UILabel"; text = "_Lemma Header"; ObjectID = "9RY-jv-CuQ"; */
+"9RY-jv-CuQ.text" = "_Lemma Header";
+
+/* (No Commment) */
+"EFW-Vb-VD1.headerTitle" = "Spraak";
+
+/* Class = "UILabel"; text = "_footer placeholder"; ObjectID = "FP8-VG-1BO"; */
+"FP8-VG-1BO.text" = "_footer placeholder";
+
+/* Class = "UILabel"; text = "_Lemma Body"; ObjectID = "FTn-mG-kg8"; */
+"FTn-mG-kg8.text" = "_Lemma Body";
+
+/* Class = "UILabel"; text = "_Publication Subtitle"; ObjectID = "Fod-bc-SQK"; */
+"Fod-bc-SQK.text" = "_Publication Subtitle";
+
+/* (No Commment) */
+"Gvh-IB-g5R.text" = "_Lemma Header";
+
+/* (No Commment) */
+"HCJ-k2-Tdt.text" = "_Lemma Body";
+
+/* Class = "UILabel"; text = "_Lemma Body"; ObjectID = "M7e-b3-iNe"; */
+"M7e-b3-iNe.text" = "_Lemma Body";
 
 /* Class = "UIViewController"; title = "Article"; ObjectID = "MN4-SG-tnN"; */
 "MN4-SG-tnN.title" = "Artikel";
 
-/* (No Commment) */
-"S4N-VP-cIr.title" = "Woordenboek";
+/* Class = "UIButton"; normalTitle = "_Lemma Base"; ObjectID = "Mbl-3t-hyW"; */
+"Mbl-3t-hyW.normalTitle" = "_Lemma Base";
 
-/* Class = "UILabel"; text = "Table of Contents"; ObjectID = "lhQ-06-jdy"; Note = "Table of Content header in popover"; */
-"lhQ-06-jdy.text" = "Inhoudsopgave";
+/* Class = "UILabel"; text = "_Auto-complete suggestion"; ObjectID = "N4B-ra-s2w"; */
+"N4B-ra-s2w.text" = "_Auto-complete suggestion";
+
+/* Class = "UILabel"; text = "_Publication Title"; ObjectID = "P0X-An-oeo"; */
+"P0X-An-oeo.text" = "TItle";
+
+/* Class = "UIBarButtonItem"; title = "Library"; ObjectID = "PEf-QN-NNn"; */
+"PEf-QN-NNn.title" = "Bibliotheek";
+
+/* (No Commment) */
+"PIn-X3-sxe.segmentTitles[0]" = "Inhoud";
+
+/* (No Commment) */
+"PIn-X3-sxe.segmentTitles[1]" = "Opties";
+
+/* (No Commment) */
+"QIA-lT-kgf.title" = "Collection View Controller";
+
+/* Class = "UIBarButtonItem"; title = "Change Speech Rate"; ObjectID = "Twh-Of-hCP"; */
+"Twh-Of-hCP.title" = "Wijzig spreeksnelheid";
+
+/* Class = "UIBarButtonItem"; title = "Done"; ObjectID = "YXY-DD-Mby"; */
+"YXY-DD-Mby.title" = "Gereed";
+
+/* Class = "UILabel"; text = "_Lemma Body"; ObjectID = "lY0-jJ-psj"; */
+"lY0-jJ-psj.text" = "_Lemma Body";
+
+/* Class = "UILabel"; text = "_Publication Title"; ObjectID = "qcC-o8-ngL"; */
+"qcC-o8-ngL.text" = "_Publication Title";
 
 /* Class = "UINavigationItem"; title = "Publication"; ObjectID = "sf4-8B-0dC"; */
 "sf4-8B-0dC.title" = "Publicatie";
 
+/* Class = "UINavigationItem"; title = "Library"; ObjectID = "uor-Xo-sAv"; Note = "Navigation Item"; */
+"uor-Xo-sAv.title" = "Bibliotheek";
+
 /* Class = "UINavigationItem"; title = "Dictionary"; ObjectID = "x16-NA-xc2"; */
 "x16-NA-xc2.title" = "Woordenboek";
+
+/* Class = "UILabel"; text = "_Table of Contents entry"; ObjectID = "xu2-tl-zTh"; */
+"xu2-tl-zTh.text" = "_Table of Contents entry";
 
